Fixed cmake building a libary instead of an executable by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(emulator VERSION 0.1.0)
 
-add_library(emulator main.cpp defines.h memory.h cpu.h memory.cpp cpu.cpp)
+add_executable(emulator main.cpp defines.h memory.h cpu.h memory.cpp cpu.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
