Compile with C++ 20. Required for std::popcount

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(emulator VERSION 0.1.0)
+set(CMAKE_CXX_STANDARD 20)
 
 add_executable(emulator main.cpp defines.h memory.h cpu.h memory.cpp cpu.cpp)
 
